Commit at 02-12-2016 12:36 am

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     <script src="ng-js/angular-animate.min.js"></script>
     <script src="ng-js/angular-ui-router.js"></script>
     <script src="ng-js/ng-file-upload.js"></script>
+    <script src="https://www.youtube.com/iframe_api"></script>
+    <script src="ng-js/angular-youtube-embed.js"></script>
     <script src="ng-js/app.js"></script>
     <script src="ng-js/angular-validator.js"></script>
     <script src="ng-js/angular-cookies.js"></script>
